Opened 3 years ago
Closed 3 years ago
#15146 closed bug (fixed)
[BootManager] mention that it isn't suitable for EFI booting
Reported by: | diver | Owned by: | nobody |
---|---|---|---|
Priority: | normal | Milestone: | R1/beta2 |
Component: | Applications/BootManager | Version: | R1/Development |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Platform: | All |
Description
This seems to cause a lot of confusion for some people.
Note:
See TracTickets
for help on using tickets.
It will refuse to install itself on EFI disks now.