BootManager: Added Warning Message for EFI Booting

A simple, yet effective BAlert.
Fixes #15146